--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Temperature converter</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Temperature Converter</title>
+    <!-- css link-->
+    <link rel="stylesheet" href="style.css"/>
+    <!-- box icons-->
+    <link
+     rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
+  <!-- fontawesome cdn link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-iecdLmask17CVkqkXNQ/ZH/XL1vWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous"
+  referrerpolicy="no-referrer"/>
 </head>
-
 <body>
     <div class="container">
-        <form id="calcTemp" onsubmit="calculateTemp(); return false">
-            <label for="temp">Enter the temperature to convert</label>
-            <br>
-            <input type="number" name="temp" id="temp" value="0">
-            <select name="temp_diff" id="temp_diff">
-                <option value="cel">&#176;Celsius</option>
-                <option value="fah">&#176;Fahrenheit</option>
-            </select>
-            <br>
-            <input type="submit" name="temp" id="submit">
-            <br>
-            <span id="result"></span>
-        </form>
+        <div class="temperature-converter">
+            <!-- mobile icon -->
+            <div class="mobile">
+                <p>9.30 AM</p>
+                <div>
+                    <i class="bx bx-signal-4"></i>
+                    <i class="bx bx-wifi"></i>
+                    <i class="bx bxs-battery"></i>
+                </div>
+            </div>
+            <h1 class="title">Temperature Converter</h1>
+
+            <!-- showing result here-->
+            <div class="result">
+                <span class="result-heading">Result (Celsius)</span>
+                <h2 class="celsius-value" id="celsius">1</h2>
+
+            </div>
+            <!-- input field-->
+            <div class="degree-type">
+
+
+                <!-- for degree -->
+                <div class="degree-field">
+                    <label for="degree">Degrees</label>
+                    <input type="number" name="degree" id="degree">
+                </div>
+
+                <!-- for option selection-->
+                <div class="temp-field">
+                    <label for="temp-type">Type</label>
+                    <select name="Temperature" id="temp-type" autocomplete="on">
+                        <option value="fahrenheit"
+                        id="fahrenheit">Fahrenheit</option>
+                        <option value="kelvin" id="kelvin">Kelvin</option>
+                    </select>
+                </div>
+            </div>
+
+            <button id="convert-btn">Convert</button>
+        </div>
+
     </div>
 
-    <script src="script.js"></script>
-</body>
 
+    <!-- script tags-->
+    <script src="sc.js"></script>
+</body>
 </html>
